# routes/index.js
@@ -1,6 +1,7 @@
 const routes = require('express').Router();
 
-routes.use('/contacts', require('./contacts'))
+routes.use('/movies', require('./movies'))
+routes.use('/wishlist', require('./wishlist'))
 routes.use('/', require('./swagger'));
 
 
